Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
@@ -50,5 +50,6 @@
   "dhp331:2": "Sreća je kad smo i sa malo zadovoljni. ",
   "dhp331:3": "Sreća su mnoga naša dobročinstva kad život okončavamo. ",
   "dhp331:4": "Sreća je kad se oslobodimo svake patnje. ",
-  "dhp332:1": "Sreća je na svetu ovom pomagati sopstvenoj majci, "
+  "dhp332:1": "Sreća je na svetu ovom pomagati sopstvenoj majci, ",
+  "dhp332:2": "sopstvenom ocu, "
 }
