--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
@@ -52,5 +52,6 @@
   "dhp331:4": "Sreća je kad se oslobodimo svake patnje. ",
   "dhp332:1": "Sreća je na svetu ovom pomagati sopstvenoj majci, ",
   "dhp332:2": "sopstvenom ocu, ",
-  "dhp332:3": "sreća je na svetu ovom monah biti, "
+  "dhp332:3": "sreća je na svetu ovom monah biti, ",
+  "dhp332:4": "istinski probuđen biti. "
 }
