--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
@@ -54,5 +54,6 @@
   "dhp332:2": "sopstvenom ocu, ",
   "dhp332:3": "sreća je na svetu ovom monah biti, ",
   "dhp332:4": "istinski probuđen biti. ",
-  "dhp333:1": "Sreća je čestit biti sve do smrti, "
+  "dhp333:1": "Sreća je čestit biti sve do smrti, ",
+  "dhp333:2": "sreća je imati veru čvrstu, "
 }
