Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
@@ -55,5 +55,6 @@
   "dhp332:3": "sreća je na svetu ovom monah biti, ",
   "dhp332:4": "istinski probuđen biti. ",
   "dhp333:1": "Sreća je čestit biti sve do smrti, ",
-  "dhp333:2": "sreća je imati veru čvrstu, "
+  "dhp333:2": "sreća je imati veru čvrstu, ",
+  "dhp333:3": "sreća je mudrost steći; "
 }
