Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp320-333_translation-sr-brankokovacevic.json
@@ -56,5 +56,6 @@
   "dhp332:4": "istinski probuđen biti. ",
   "dhp333:1": "Sreća je čestit biti sve do smrti, ",
   "dhp333:2": "sreća je imati veru čvrstu, ",
-  "dhp333:3": "sreća je mudrost steći; "
+  "dhp333:3": "sreća je mudrost steći; ",
+  "dhp333:4": "ne činiti zlo jeste sreća. "
 }
