Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json
@@ -1,4 +1,5 @@
 {
   "dhp334:0.1": "Kratka zbirka Budnih govora ",
-  "dhp334:0.2": "Reči mudrosti "
+  "dhp334:0.2": "Reči mudrosti ",
+  "dhp334:0.3": "Žudnja "
 }
