Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json
@@ -2,5 +2,6 @@
   "dhp334:0.1": "Kratka zbirka Budnih govora ",
   "dhp334:0.2": "Reči mudrosti ",
   "dhp334:0.3": "Žudnja ",
-  "dhp334:1": "U čoveku koji je nepažljiv, "
+  "dhp334:1": "U čoveku koji je nepažljiv, ",
+  "dhp334:2": "žudnja buja kao maluva puzavica, "
 }
