--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json
@@ -3,5 +3,6 @@
   "dhp334:0.2": "Reči mudrosti ",
   "dhp334:0.3": "Žudnja ",
   "dhp334:1": "U čoveku koji je nepažljiv, ",
-  "dhp334:2": "žudnja buja kao maluva puzavica, "
+  "dhp334:2": "žudnja buja kao maluva puzavica, ",
+  "dhp334:3": "taj iz života u život luta, "
 }
