Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json
@@ -4,5 +4,6 @@
   "dhp334:0.3": "Žudnja ",
   "dhp334:1": "U čoveku koji je nepažljiv, ",
   "dhp334:2": "žudnja buja kao maluva puzavica, ",
-  "dhp334:3": "taj iz života u život luta, "
+  "dhp334:3": "taj iz života u život luta, ",
+  "dhp334:4": "k’o majmun u šumi što za plodom traga. "
 }
