--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json
@@ -5,5 +5,6 @@
   "dhp334:1": "U čoveku koji je nepažljiv, ",
   "dhp334:2": "žudnja buja kao maluva puzavica, ",
   "dhp334:3": "taj iz života u život luta, ",
-  "dhp334:4": "k’o majmun u šumi što za plodom traga. "
+  "dhp334:4": "k’o majmun u šumi što za plodom traga. ",
+  "dhp335:1": "Koga god kobna žudnja savlada, "
 }
