--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json
@@ -6,5 +6,6 @@
   "dhp334:2": "žudnja buja kao maluva puzavica, ",
   "dhp334:3": "taj iz života u život luta, ",
   "dhp334:4": "k’o majmun u šumi što za plodom traga. ",
-  "dhp335:1": "Koga god kobna žudnja savlada, "
+  "dhp335:1": "Koga god kobna žudnja savlada, ",
+  "dhp335:2": "ta vezanost za ovaj svet, "
 }
