Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json
@@ -10,5 +10,6 @@
   "dhp335:2": "ta vezanost za ovaj svet, ",
   "dhp335:3": "u njemu jadi narastaju, ",
   "dhp335:4": "kao i bujna trava birana. ",
-  "dhp336:1": "A ko god kobnu žudnju nadjača, "
+  "dhp336:1": "A ko god kobnu žudnju nadjača, ",
+  "dhp336:2": "tako tešku da se prevlada, "
 }
