--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json
@@ -12,5 +12,6 @@
   "dhp335:4": "kao i bujna trava birana. ",
   "dhp336:1": "A ko god kobnu žudnju nadjača, ",
   "dhp336:2": "tako tešku da se prevlada, ",
-  "dhp336:3": "sa njega jadi otpadnu, "
+  "dhp336:3": "sa njega jadi otpadnu, ",
+  "dhp336:4": "k’o kišne kapi sa lista lotosovog. "
 }
