--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json
@@ -13,5 +13,6 @@
   "dhp336:1": "A ko god kobnu žudnju nadjača, ",
   "dhp336:2": "tako tešku da se prevlada, ",
   "dhp336:3": "sa njega jadi otpadnu, ",
-  "dhp336:4": "k’o kišne kapi sa lista lotosovog. "
+  "dhp336:4": "k’o kišne kapi sa lista lotosovog. ",
+  "dhp337:1": "Kažem vama "
 }
