--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json
@@ -14,5 +14,6 @@
   "dhp336:2": "tako tešku da se prevlada, ",
   "dhp336:3": "sa njega jadi otpadnu, ",
   "dhp336:4": "k’o kišne kapi sa lista lotosovog. ",
-  "dhp337:1": "Kažem vama "
+  "dhp337:1": "Kažem vama ",
+  "dhp337:2": "koji se okupiste ovde: "
 }
