Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json
@@ -16,5 +16,6 @@
   "dhp336:4": "k’o kišne kapi sa lista lotosovog. ",
   "dhp337:1": "Kažem vama ",
   "dhp337:2": "koji se okupiste ovde: ",
-  "dhp337:3": "„Koren žudnje iskopajte, "
+  "dhp337:3": "„Koren žudnje iskopajte, ",
+  "dhp337:4": "k’o travar mirisni koren birana trave, "
 }
