--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json
@@ -17,5 +17,6 @@
   "dhp337:1": "Kažem vama ",
   "dhp337:2": "koji se okupiste ovde: ",
   "dhp337:3": "„Koren žudnje iskopajte, ",
-  "dhp337:4": "k’o travar mirisni koren birana trave, "
+  "dhp337:4": "k’o travar mirisni koren birana trave, ",
+  "dhp337:5": "neka vas Māra ne savlada "
 }
