Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json
@@ -18,5 +18,6 @@
   "dhp337:2": "koji se okupiste ovde: ",
   "dhp337:3": "„Koren žudnje iskopajte, ",
   "dhp337:4": "k’o travar mirisni koren birana trave, ",
-  "dhp337:5": "neka vas Māra ne savlada "
+  "dhp337:5": "neka vas Māra ne savlada ",
+  "dhp337:6": "kao što bujica trsku prelomi.\" "
 }
