--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json
@@ -21,5 +21,6 @@
   "dhp337:5": "neka vas Māra ne savlada ",
   "dhp337:6": "kao što bujica trsku prelomi.\" ",
   "dhp338:1": "Baš kao što će drvo, makar i posečeno, ponovo izrasti, ",
-  "dhp338:2": "samo ako mu je korenje jako i neoštećeno, "
+  "dhp338:2": "samo ako mu je korenje jako i neoštećeno, ",
+  "dhp338:3": "tako će i ova patnja uvek ponovo bujati, "
 }
