Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json
@@ -22,5 +22,6 @@
   "dhp337:6": "kao što bujica trsku prelomi.\" ",
   "dhp338:1": "Baš kao što će drvo, makar i posečeno, ponovo izrasti, ",
   "dhp338:2": "samo ako mu je korenje jako i neoštećeno, ",
-  "dhp338:3": "tako će i ova patnja uvek ponovo bujati, "
+  "dhp338:3": "tako će i ova patnja uvek ponovo bujati, ",
+  "dhp338:4": "ako pritajena žudnja uništena nije. "
 }
