--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json
@@ -23,5 +23,6 @@
   "dhp338:1": "Baš kao što će drvo, makar i posečeno, ponovo izrasti, ",
   "dhp338:2": "samo ako mu je korenje jako i neoštećeno, ",
   "dhp338:3": "tako će i ova patnja uvek ponovo bujati, ",
-  "dhp338:4": "ako pritajena žudnja uništena nije. "
+  "dhp338:4": "ako pritajena žudnja uništena nije. ",
+  "dhp339:1": "U kome trideset šest moćnih bujica "
 }
