--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp334-359_translation-sr-brankokovacevic.json
@@ -25,5 +25,6 @@
   "dhp338:3": "tako će i ova patnja uvek ponovo bujati, ",
   "dhp338:4": "ako pritajena žudnja uništena nije. ",
   "dhp339:1": "U kome trideset šest moćnih bujica ",
-  "dhp339:2": "ka prijatnim stvarima teku, "
+  "dhp339:2": "ka prijatnim stvarima teku, ",
+  "dhp339:3": "njega pogrešna gledišta "
 }
