Translations by palistudent to translation/en/kelly/sutta/kn/mil/mil3.5.6_translation-en-kelly.json

--- a/translation/en/kelly/sutta/kn/mil/mil3.5.6_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.6_translation-en-kelly.json
@@ -1,3 +1,4 @@
 {
-  "mil3.5.6:0.3": "Question on the Experiencer "
+  "mil3.5.6:0.3": "Question on the Experiencer ",
+  "mil3.5.6:3.1": "Question on the Experiencer sixth "
 }
