--- a/translation/en/kelly/sutta/kn/mil/mil3.5.6_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.6_translation-en-kelly.json
@@ -1,4 +1,5 @@
 {
+  "mil3.5.6:0.1": "Milinda's Questions ",
   "mil3.5.6:0.3": "Question on the Experiencer ",
   "mil3.5.6:3.1": "Question on the Experiencer sixth "
 }
