--- a/translation/en/kelly/sutta/kn/mil/mil3.5.6_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.6_translation-en-kelly.json
@@ -3,5 +3,6 @@
   "mil3.5.6:0.2": "Buddha Chapter ",
   "mil3.5.6:0.3": "Question on the Experiencer ",
   "mil3.5.6:1.1": "The king asked: ",
+  "mil3.5.6:1.2": "“Venerable Nāgasena, is an experiencer to be found?” ",
   "mil3.5.6:3.1": "Question on the Experiencer sixth "
 }
