--- a/translation/en/kelly/sutta/kn/mil/mil3.5.6_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.6_translation-en-kelly.json
@@ -6,5 +6,6 @@
   "mil3.5.6:1.2": "“Venerable Nāgasena, is an experiencer to be found?” ",
   "mil3.5.6:1.3": "The elder responded: ",
   "mil3.5.6:1.4": "“According to ultimate reality, an experiencer is not to be found.” ",
+  "mil3.5.6:2.1": "“You are clever, venerable Nāgasena.” ",
   "mil3.5.6:3.1": "Question on the Experiencer sixth "
 }
