--- a/translation/en/kelly/sutta/kn/mil/mil3.5.7_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.7_translation-en-kelly.json
@@ -2,6 +2,7 @@
   "mil3.5.7:0.1": "Milinda's Questions ",
   "mil3.5.7:0.2": "Buddha Chapter ",
   "mil3.5.7:0.3": "Question on Transmigrating to Another Body ",
+  "mil3.5.7:1.1": "The king asked: ",
   "mil3.5.7:3.1": "“You are clever, venerable Nāgasena.” ",
   "mil3.5.7:4.1": "Question on Transmigrating to Another Body seventh "
 }
