--- a/translation/en/kelly/sutta/kn/mil/mil3.5.7_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.7_translation-en-kelly.json
@@ -3,6 +3,7 @@
   "mil3.5.7:0.2": "Buddha Chapter ",
   "mil3.5.7:0.3": "Question on Transmigrating to Another Body ",
   "mil3.5.7:1.1": "The king asked: ",
+  "mil3.5.7:1.2": "“Venerable Nāgasena, is there any being at all that transmigrates from this body to another body?” ",
   "mil3.5.7:3.1": "“You are clever, venerable Nāgasena.” ",
   "mil3.5.7:4.1": "Question on Transmigrating to Another Body seventh "
 }
