--- a/translation/en/kelly/sutta/kn/mil/mil3.5.8_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.8_translation-en-kelly.json
@@ -1,5 +1,6 @@
 {
   "mil3.5.8:0.1": "Milinda's Questions ",
   "mil3.5.8:0.2": "Buddha Chapter ",
+  "mil3.5.8:2.3": "“Certainly not, venerable sir.” ",
   "mil3.5.8:3.1": "“You are clever, venerable Nāgasena.” "
 }
