Translations by palistudent to translation/en/kelly/sutta/kn/mil/mil3.5.9_translation-en-kelly.json

--- a/translation/en/kelly/sutta/kn/mil/mil3.5.9_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.9_translation-en-kelly.json
@@ -1,5 +1,6 @@
 {
   "mil3.5.9:0.1": "Milinda's Questions ",
   "mil3.5.9:0.2": "Buddha Chapter ",
+  "mil3.5.9:2.1": "“Please give me an analogy.” ",
   "mil3.5.9:3.1": "“You are clever, venerable Nāgasena.” "
 }
