--- a/translation/en/kelly/sutta/kn/mil/mil3.5.10_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.10_translation-en-kelly.json
@@ -1,5 +1,6 @@
 {
   "mil3.5.10:0.1": "Milinda's Questions ",
   "mil3.5.10:0.2": "Buddha Chapter ",
+  "mil3.5.10:2.1": "“Please give me an analogy.” ",
   "mil3.5.10:3.1": "“You are clever, venerable Nāgasena.” "
 }
