Translations by palistudent to translation/en/kelly/sutta/kn/mil/mil3.5.7_translation-en-kelly.json

--- a/translation/en/kelly/sutta/kn/mil/mil3.5.7_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.7_translation-en-kelly.json
@@ -12,6 +12,7 @@
   "mil3.5.7:2.3": "“Yes, venerable sir, he would deserve punishment.” ",
   "mil3.5.7:2.4": "“But, your majesty, those mangos that were taken are not the same as those that were planted, why would he deserve punishment?” ",
   "mil3.5.7:2.5": "“Those mangos, venerable sir, arose dependent on the others, therefore he would deserve punishment.” ",
+  "mil3.5.7:2.6": "“In the same way, your majesty, with this name-and-form one performs a lovely or an evil action, and by this action another name-and-form reconnects. Therefore, one is not freed from evil actions.” ",
   "mil3.5.7:3.1": "“You are clever, venerable Nāgasena.” ",
   "mil3.5.7:4.1": "Question on Transmigrating to Another Body seventh "
 }
