--- a/translation/en/kelly/sutta/kn/mil/mil3.5.8_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.8_translation-en-kelly.json
@@ -4,5 +4,6 @@
   "mil3.5.8:0.3": "Question on the Existence of the Fruits of Actions ",
   "mil3.5.8:2.1": "“Please give me an analogy.” ",
   "mil3.5.8:2.3": "“Certainly not, venerable sir.” ",
-  "mil3.5.8:3.1": "“You are clever, venerable Nāgasena.” "
+  "mil3.5.8:3.1": "“You are clever, venerable Nāgasena.” ",
+  "mil3.5.8:4.1": "Question on the Existence of the Fruits of Actions eighth "
 }
