Translations by palistudent to translation/en/kelly/sutta/kn/mil/mil3.5.8_translation-en-kelly.json

--- a/translation/en/kelly/sutta/kn/mil/mil3.5.8_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.8_translation-en-kelly.json
@@ -5,6 +5,7 @@
   "mil3.5.8:1.1": "The king asked: ",
   "mil3.5.8:1.2": "“Venerable Nāgasena, for a wholesome or unwholesome action done by this name-and-form, where do those actions remain?” ",
   "mil3.5.8:1.3": "“Those actions would follow one, your majesty, like a shadow that never leaves.” ",
+  "mil3.5.8:1.4": "“Is it then possible, venerable sir, to point to those actions and say they remain here or there?” ",
   "mil3.5.8:2.1": "“Please give me an analogy.” ",
   "mil3.5.8:2.3": "“Certainly not, venerable sir.” ",
   "mil3.5.8:3.1": "“You are clever, venerable Nāgasena.” ",
