--- a/translation/en/kelly/sutta/kn/mil/mil3.5.8_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.8_translation-en-kelly.json
@@ -10,6 +10,7 @@
   "mil3.5.8:2.1": "“Please give me an analogy.” ",
   "mil3.5.8:2.2": "“What do you think, your majesty, for those trees where the fruit has not yet arisen, is it possible to point to those fruits and say those fruits remain here or there?” ",
   "mil3.5.8:2.3": "“Certainly not, venerable sir.” ",
+  "mil3.5.8:2.4": "“In the same way, your majesty, as long as the continuity of life is not cut off, it is not possible to point to those actions and say they remain here or there.” ",
   "mil3.5.8:3.1": "“You are clever, venerable Nāgasena.” ",
   "mil3.5.8:4.1": "Question on the Existence of the Fruits of Actions eighth "
 }
