--- a/translation/en/kelly/sutta/kn/mil/mil3.5.9_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.9_translation-en-kelly.json
@@ -3,5 +3,6 @@
   "mil3.5.9:0.2": "Buddha Chapter ",
   "mil3.5.9:0.3": "Question on Knowing Re-arising ",
   "mil3.5.9:2.1": "“Please give me an analogy.” ",
-  "mil3.5.9:3.1": "“You are clever, venerable Nāgasena.” "
+  "mil3.5.9:3.1": "“You are clever, venerable Nāgasena.” ",
+  "mil3.5.9:4.1": "Question on Knowing Re-arising ninth "
 }
