--- a/translation/en/kelly/sutta/kn/mil/mil3.5.9_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.9_translation-en-kelly.json
@@ -6,6 +6,7 @@
   "mil3.5.9:1.2": "“Venerable Nāgasena, does one who re-arises know, ‘I will re-arise’?” ",
   "mil3.5.9:1.3": "“Yes, your majesty, one who re-arises knows, ‘I will re-arise’?” ",
   "mil3.5.9:2.1": "“Please give me an analogy.” ",
+  "mil3.5.9:2.2": "“Just as, your majesty, when a householder farmer plants seeds in the ground and it rains well, does he know that grain will grow?” ",
   "mil3.5.9:3.1": "“You are clever, venerable Nāgasena.” ",
   "mil3.5.9:4.1": "Question on Knowing Re-arising ninth "
 }
