Translations by palistudent to translation/en/kelly/sutta/kn/mil/mil3.5.10_translation-en-kelly.json

--- a/translation/en/kelly/sutta/kn/mil/mil3.5.10_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.10_translation-en-kelly.json
@@ -3,6 +3,7 @@
   "mil3.5.10:0.2": "Buddha Chapter ",
   "mil3.5.10:0.3": "Question on Pointing Out the Buddha ",
   "mil3.5.10:1.1": "The king asked: ",
+  "mil3.5.10:1.2": "“Venerable Nāgasena, does the Buddha exist?” ",
   "mil3.5.10:2.1": "“Please give me an analogy.” ",
   "mil3.5.10:3.1": "“You are clever, venerable Nāgasena.” ",
   "mil3.5.10:4.1": "Question on Pointing Out the Buddha tenth "
