--- a/translation/en/kelly/sutta/kn/mil/mil3.5.10_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.10_translation-en-kelly.json
@@ -5,6 +5,7 @@
   "mil3.5.10:1.1": "The king asked: ",
   "mil3.5.10:1.2": "“Venerable Nāgasena, does the Buddha exist?” ",
   "mil3.5.10:1.3": "“Yes, your majesty, the Blessed One exists.” ",
+  "mil3.5.10:1.4": "“Is it then possible, venerable sir, to point to the Buddha as being either here or there?” ",
   "mil3.5.10:2.1": "“Please give me an analogy.” ",
   "mil3.5.10:3.1": "“You are clever, venerable Nāgasena.” ",
   "mil3.5.10:4.1": "Question on Pointing Out the Buddha tenth "
