--- a/translation/en/kelly/sutta/kn/mil/mil3.5.10_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.10_translation-en-kelly.json
@@ -10,6 +10,7 @@
   "mil3.5.10:2.1": "“Please give me an analogy.” ",
   "mil3.5.10:2.2": "“What do you think, your majesty, when the flame of a great burning mass of fire has been extinguished, is it possible to point to that flame and say it remains here or there?” ",
   "mil3.5.10:2.3": "“Certainly not, venerable sir for that flame has ceased and gone beyond description.” ",
+  "mil3.5.10:2.4": "“In the same way, your majesty, the Blessed One has passed away in the element of Nibbāna with no residue remaining, so it is not possible to point to the Blessed One as being either here or there. However, your majesty, it is possible to point out the Blessed One through the body of Dhamma, ",
   "mil3.5.10:3.1": "“You are clever, venerable Nāgasena.” ",
   "mil3.5.10:4.1": "Question on Pointing Out the Buddha tenth "
 }
