Translations by palistudent to translation/en/kelly/sutta/kn/mil/mil3.5.10_translation-en-kelly.json

--- a/translation/en/kelly/sutta/kn/mil/mil3.5.10_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.10_translation-en-kelly.json
@@ -13,5 +13,6 @@
   "mil3.5.10:2.4": "“In the same way, your majesty, the Blessed One has passed away in the element of Nibbāna with no residue remaining, so it is not possible to point to the Blessed One as being either here or there. However, your majesty, it is possible to point out the Blessed One through the body of Dhamma, ",
   "mil3.5.10:2.5": "for this Dhamma has been taught by the Blessed One.” ",
   "mil3.5.10:3.1": "“You are clever, venerable Nāgasena.” ",
-  "mil3.5.10:4.1": "Question on Pointing Out the Buddha tenth "
+  "mil3.5.10:4.1": "Question on Pointing Out the Buddha tenth ",
+  "mil3.5.10:5.1": "Buddha Chapter fifth "
 }
