Translations by palistudent to translation/en/kelly/sutta/kn/mil/mil3.5.10_translation-en-kelly.json

--- a/translation/en/kelly/sutta/kn/mil/mil3.5.10_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.10_translation-en-kelly.json
@@ -14,5 +14,6 @@
   "mil3.5.10:2.5": "for this Dhamma has been taught by the Blessed One.” ",
   "mil3.5.10:3.1": "“You are clever, venerable Nāgasena.” ",
   "mil3.5.10:4.1": "Question on Pointing Out the Buddha tenth ",
-  "mil3.5.10:5.1": "Buddha Chapter fifth "
+  "mil3.5.10:5.1": "Buddha Chapter fifth ",
+  "mil3.5.10:6.1": "In this chapter ten questions "
 }
