Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc40_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc40_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc40_translation-en-brahmali.json
@@ -56,7 +56,7 @@
   "pli-tv-bu-vb-pc40:3.3.0": "Non-offenses ",
   "pli-tv-bu-vb-pc40:3.3.1": "There is no offense: ",
   "pli-tv-bu-vb-pc40:3.3.2": "if it is water or tooth cleaners; ",
-  "pli-tv-bu-vb-pc40:3.3.3": "if, when there is a reason, but there is no attendant, he himself takes the four filthy edibles and eats them; ",
+  "pli-tv-bu-vb-pc40:3.3.3": "if, when there is a reason, but there is no attendant, he himself takes the four foul edibles and eats them; ",
   "pli-tv-bu-vb-pc40:3.3.4": "if he is insane; ",
   "pli-tv-bu-vb-pc40:3.3.5": "if he is the first offender. ",
   "pli-tv-bu-vb-pc40:3.3.6": "The training rule on tooth cleaners, the tenth, is finished. ",
