--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc40_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc40_translation-en-brahmali.json
@@ -45,7 +45,7 @@
   "pli-tv-bu-vb-pc40:3.1.11": "Except for water and tooth cleaners: ",
   "pli-tv-bu-vb-pc40:3.1.12": "apart from water and tooth cleaners. ",
   "pli-tv-bu-vb-pc40:3.1.13": "If he takes it with the intention of eating it, he commits an offense of wrong conduct. ",
-  "pli-tv-bu-vb-pc40:3.1.14": "For every mouthful, he commits an offense entailing confession. ",
+  "pli-tv-bu-vb-pc40:3.1.14": "For every mouthful swallowed, he commits an offense entailing confession. ",
   "pli-tv-bu-vb-pc40:3.2.0": "Permutations ",
   "pli-tv-bu-vb-pc40:3.2.1": "If it has not been received, and he does not perceive it as such, and he eats it, except for water and tooth cleaners, he commits an offense entailing confession. ",
   "pli-tv-bu-vb-pc40:3.2.2": "If it has not been received, but he is unsure of it, and he eats it, except for water and tooth cleaners, he commits an offense entailing confession. ",
