--- a/translation/en/kelly/sutta/kn/mil/mil3.5.8_translation-en-kelly.json
+++ b/translation/en/kelly/sutta/kn/mil/mil3.5.8_translation-en-kelly.json
@@ -1,5 +1,5 @@
 {
-  "mil3.5.8:0.1": "Milinda's Questions ",
+  "mil3.5.8:0.1": "Milinda’s Questions ",
   "mil3.5.8:0.2": "Buddha Chapter ",
   "mil3.5.8:0.3": "Question on the Existence of the Fruits of Actions ",
   "mil3.5.8:1.1": "The king asked: ",
