--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc33_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc33_translation-en-brahmali.json
@@ -103,7 +103,7 @@
   "pli-tv-bu-vb-pc33:5.1.9": "It is a time of making robes: ",
   "pli-tv-bu-vb-pc33:5.1.10": "when he is making robes, he may eat a meal before another. ",
   "pli-tv-bu-vb-pc33:5.1.11": "If he receives food with the intention of eating it, except on an appropriate occasion, he commits an offense of wrong conduct. ",
-  "pli-tv-bu-vb-pc33:5.1.12": "For every mouthful, he commits an offense entailing confession. ",
+  "pli-tv-bu-vb-pc33:5.1.12": "For every mouthful swallowed, he commits an offense entailing confession. ",
   "pli-tv-bu-vb-pc33:5.2.0": "Permutations ",
   "pli-tv-bu-vb-pc33:5.2.1": "If it is a meal before another, and he perceives it as such, and he eats it, except on an appropriate occasion, he commits an offense entailing confession. ",
   "pli-tv-bu-vb-pc33:5.2.2": "If it is a meal before another, but he is unsure of it, and he eats it, except on an appropriate occasion, he commits an offense entailing confession. ",
