--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pd/pli-tv-bu-vb-pd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pd/pli-tv-bu-vb-pd3_translation-en-brahmali.json
@@ -93,7 +93,7 @@
   "pli-tv-bu-vb-pd3:4.2.2": "If a family is designated as in training, but he is unsure of it, and he, without being sick or without being invited, eats fresh or cooked food after personally receiving it from that family, he commits an offense entailing acknowledgment. ",
   "pli-tv-bu-vb-pd3:4.2.3": "If a family is designated as in training, but he does not perceive it as such, and he, without being sick or without being invited, eats fresh or cooked food after personally receiving it from that family, he commits an offense entailing acknowledgment. ",
   "pli-tv-bu-vb-pd3:4.2.4": "If he receives post-midday tonics, seven-day tonics, or lifetime tonics for the purpose of food, he commits an offense of wrong conduct. ",
-  "pli-tv-bu-vb-pd3:4.2.5": "For every mouthful, he commits an offense of wrong conduct. ",
+  "pli-tv-bu-vb-pd3:4.2.5": "For every mouthful swallowed, he commits an offense of wrong conduct. ",
   "pli-tv-bu-vb-pd3:4.2.6": "If a family is not designated as in training, but he perceives it as such, he commits an offense of wrong conduct. ",
   "pli-tv-bu-vb-pd3:4.2.7": "If a family is not designated as in training, but he is unsure of it, he commits an offense of wrong conduct. ",
   "pli-tv-bu-vb-pd3:4.2.8": "If a family is not designated as in training, and he does not perceive it as such, there is no offense. ",
