--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pd/pli-tv-bu-vb-pd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pd/pli-tv-bu-vb-pd3_translation-en-brahmali.json
@@ -87,7 +87,7 @@
   "pli-tv-bu-vb-pd3:4.1.19": "Cooked food: ",
   "pli-tv-bu-vb-pd3:4.1.20": "there are five kinds of cooked food: cooked grain, porridge, flour  products, fish, and meat. ",
   "pli-tv-bu-vb-pd3:4.1.21": "If, without being sick and without being invited, he receives fresh or cooked food with the intention of eating it, he commits an offense of wrong conduct. ",
-  "pli-tv-bu-vb-pd3:4.1.22": "For every mouthful, he commits an offense entailing acknowledgment. ",
+  "pli-tv-bu-vb-pd3:4.1.22": "For every mouthful swallowed, he commits an offense entailing acknowledgment. ",
   "pli-tv-bu-vb-pd3:4.2.0": "Permutations ",
   "pli-tv-bu-vb-pd3:4.2.1": "If a family is designated as in training, and he perceives it as such, and he, without being sick or without being invited, eats fresh or cooked food after personally receiving it from that family, he commits an offense entailing acknowledgment. ",
   "pli-tv-bu-vb-pd3:4.2.2": "If a family is designated as in training, but he is unsure of it, and he, without being sick or without being invited, eats fresh or cooked food after personally receiving it from that family, he commits an offense entailing acknowledgment. ",
