--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pd/pli-tv-bu-vb-pd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pd/pli-tv-bu-vb-pd2_translation-en-brahmali.json
@@ -36,7 +36,7 @@
   "pli-tv-bu-vb-pd2:2.1.12": "the nun who is giving directions. ",
   "pli-tv-bu-vb-pd2:2.1.13": "Those monks should stop her: ‘Stop, Sister, while the monks are eating’: ",
   "pli-tv-bu-vb-pd2:2.1.14": "if she is not stopped by even one monk, and a monk then receives food with the intention of eating it, he commits an offense of wrong conduct. ",
-  "pli-tv-bu-vb-pd2:2.1.15": "For every mouthful, he commits an offense entailing acknowledgment. ",
+  "pli-tv-bu-vb-pd2:2.1.15": "For every mouthful swallowed, he commits an offense entailing acknowledgment. ",
   "pli-tv-bu-vb-pd2:2.2.0": "Permutations ",
   "pli-tv-bu-vb-pd2:2.2.1": "If she is fully ordained, and he perceives her as such, and he does not restrain her from giving directions, he commits an offense entailing acknowledgment. ",
   "pli-tv-bu-vb-pd2:2.2.2": "If she is fully ordained, but he is unsure of it, and he does not restrain her from giving directions, he commits an offense entailing acknowledgment. ",
