Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pd/pli-tv-bu-vb-pd1_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pd/pli-tv-bu-vb-pd1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pd/pli-tv-bu-vb-pd1_translation-en-brahmali.json
@@ -64,7 +64,7 @@
   "pli-tv-bu-vb-pd1:2.2.5": "For every mouthful, he commits an offense of wrong conduct. ",
   "pli-tv-bu-vb-pd1:2.2.6": "If he receives fresh or cooked food, with the intention of eating it, directly from a nun who is fully ordained only on one side, ",
   "pli-tv-bu-vb-pd1:2.2.7": "he commits an offense of wrong conduct. ",
-  "pli-tv-bu-vb-pd1:2.2.8": "For every mouthful, he commits an offense of wrong conduct. ",
+  "pli-tv-bu-vb-pd1:2.2.8": "For every mouthful swallowed, he commits an offense of wrong conduct. ",
   "pli-tv-bu-vb-pd1:2.2.9": "If she is related, but he perceives her as unrelated, he commits an offense of wrong conduct. ",
   "pli-tv-bu-vb-pd1:2.2.10": "If she is related, but he is unsure of it, he commits an offense of wrong conduct. ",
   "pli-tv-bu-vb-pd1:2.2.11": "If she is related, and he perceives her as such, there is no offense. ",
