--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pd/pli-tv-bu-vb-pd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pd/pli-tv-bu-vb-pd4_translation-en-brahmali.json
@@ -79,7 +79,7 @@
   "pli-tv-bu-vb-pd4:3.1.39": "If there has been no announcement, but he is unsure of it, and he, not being sick, eats fresh or cooked food after personally receiving it inside that monastery, then he commits an offense entailing acknowledgment. ",
   "pli-tv-bu-vb-pd4:3.1.40": "If there has been no announcement, but he perceives that there has, and he, not being sick, eats fresh or cooked food after personally receiving it inside that monastery, then he commits an offense entailing acknowledgment. ",
   "pli-tv-bu-vb-pd4:3.1.41": "If he receives post-midday tonics, seven-day tonics, or lifetime tonics for the purpose of food, he commits an offense of wrong conduct. ",
-  "pli-tv-bu-vb-pd4:3.1.42": "For every mouthful, he commits an offense of wrong conduct. ",
+  "pli-tv-bu-vb-pd4:3.1.42": "For every mouthful swallowed, he commits an offense of wrong conduct. ",
   "pli-tv-bu-vb-pd4:3.1.43": "If there has been an announcement, but he does not perceive that there has, he commits an offense of wrong conduct. ",
   "pli-tv-bu-vb-pd4:3.1.44": "If there has been an announcement, but he is unsure of it, he commits an offense of wrong conduct. ",
   "pli-tv-bu-vb-pd4:3.1.45": "If there has been an announcement, and he perceives that there has, there is no offense. ",
