--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc31_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc31_translation-en-brahmali.json
@@ -56,7 +56,7 @@
   "pli-tv-bu-vb-pc31:3.1.5": "Almsmeal at a public guesthouse: ",
   "pli-tv-bu-vb-pc31:3.1.6": "as much as one needs of any of the five cooked foods, prepared for the general public, in a building, under a roof cover, at the foot of a tree, or out in the open. ",
   "pli-tv-bu-vb-pc31:3.1.7": "A monk who is not sick may eat there once. If he receives food beyond that with the intention of eating it, he commits an offense of wrong conduct. ",
-  "pli-tv-bu-vb-pc31:3.1.8": "For every mouthful, he commits an offense entailing confession. ",
+  "pli-tv-bu-vb-pc31:3.1.8": "For every mouthful swallowed, he commits an offense entailing confession. ",
   "pli-tv-bu-vb-pc31:3.2.0": "Permutations ",
   "pli-tv-bu-vb-pc31:3.2.1": "If he is not sick, and he perceives himself as not sick, and he eats more than one almsmeal at a public guesthouse, he commits an offense entailing confession. ",
   "pli-tv-bu-vb-pc31:3.2.2": "If he is not sick, but he is unsure of it, and he eats more than one almsmeal at a public guesthouse, he commits an offense entailing confession. ",
