--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc37_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc37_translation-en-brahmali.json
@@ -46,7 +46,7 @@
   "pli-tv-bu-vb-pc37:2.2.2": "If it is the wrong time, but he is unsure of it, and he eats fresh or cooked food, he commits an offense entailing confession. ",
   "pli-tv-bu-vb-pc37:2.2.3": "If it is the wrong time, but he perceives it as the right time, and he eats fresh or cooked food, he commits an offense entailing confession. ",
   "pli-tv-bu-vb-pc37:2.2.4": "If he receives post-midday tonics, seven-day tonics, or lifetime tonics for the purpose of food, he commits an offense of wrong conduct. ",
-  "pli-tv-bu-vb-pc37:2.2.5": "For every mouthful, he commits an offense of wrong conduct. ",
+  "pli-tv-bu-vb-pc37:2.2.5": "For every mouthful swallowed, he commits an offense of wrong conduct. ",
   "pli-tv-bu-vb-pc37:2.2.6": "If it is the right time, but he perceives it as the wrong time, he commits an offense of wrong conduct. ",
   "pli-tv-bu-vb-pc37:2.2.7": "If it is the right time, but he is unsure of it, he commits an offense of wrong conduct. ",
   "pli-tv-bu-vb-pc37:2.2.8": "If it is the right time, and he perceives it as such, there is no offense. ",
