--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc37_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc37_translation-en-brahmali.json
@@ -40,7 +40,7 @@
   "pli-tv-bu-vb-pc37:2.1.9": "Cooked food: ",
   "pli-tv-bu-vb-pc37:2.1.10": "there are five kinds of cooked food: cooked grain, porridge, flour products, fish, and meat. ",
   "pli-tv-bu-vb-pc37:2.1.11": "If he receives fresh or cooked food with the intention of eating it, he commits an offense of wrong conduct. ",
-  "pli-tv-bu-vb-pc37:2.1.12": "For every mouthful, he commits an offense entailing confession. ",
+  "pli-tv-bu-vb-pc37:2.1.12": "For every mouthful swallowed, he commits an offense entailing confession. ",
   "pli-tv-bu-vb-pc37:2.2.0": "Permutations ",
   "pli-tv-bu-vb-pc37:2.2.1": "If it is the wrong time, and he perceives it as such, and he eats fresh or cooked food, he commits an offense entailing confession. ",
   "pli-tv-bu-vb-pc37:2.2.2": "If it is the wrong time, but he is unsure of it, and he eats fresh or cooked food, he commits an offense entailing confession. ",
