--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc36_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc36_translation-en-brahmali.json
@@ -74,7 +74,7 @@
   "pli-tv-bu-vb-pc36:2.2.3": "If the other monk has refused an invitation to eat more, but the donor does not perceive that he has, and he invites him to eat fresh or cooked food that is not left over, there is no offense. ",
   "pli-tv-bu-vb-pc36:2.2.4": "If he invites him to eat post-midday tonics, seven-day tonics, or lifetime tonics for the purpose of food, he commits an offense of wrong conduct. ",
   "pli-tv-bu-vb-pc36:2.2.5": "If, because of what he says, the other monk receives it with the intention of eating it, then the donor commits an offense of wrong conduct. ",
-  "pli-tv-bu-vb-pc36:2.2.6": "For every mouthful, the donor commits an offense of wrong conduct. ",
+  "pli-tv-bu-vb-pc36:2.2.6": "For every mouthful swallowed, the donor commits an offense of wrong conduct. ",
   "pli-tv-bu-vb-pc36:2.2.7": "If the other monk has not refused an invitation to eat more, but the donor perceives that he has, he commits an offense of wrong conduct. ",
   "pli-tv-bu-vb-pc36:2.2.8": "If the other monk has not refused an invitation to eat more, but the donor is unsure of it, he commits an offense of wrong conduct. ",
   "pli-tv-bu-vb-pc36:2.2.9": "If the other monk has not refused an invitation to eat more, and the donor does not perceive that he has, there is no offense. ",
