Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-pc/pli-tv-bi-vb-pc7_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-pc/pli-tv-bi-vb-pc7_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-pc/pli-tv-bi-vb-pc7_translation-en-brahmali.json
@@ -44,7 +44,7 @@
   "pli-tv-bi-vb-pc7:2.1.21": "Has it cooked: ",
   "pli-tv-bi-vb-pc7:2.1.22": "she gets someone else to cook it. ",
   "pli-tv-bi-vb-pc7:2.1.23": "If she receives it with the intention of eating it, she commits an offense of wrong conduct. ",
-  "pli-tv-bi-vb-pc7:2.1.24": "For every mouthful, she commits an offense entailing confession. ",
+  "pli-tv-bi-vb-pc7:2.1.24": "For every mouthful swallowed, she commits an offense entailing confession. ",
   "pli-tv-bi-vb-pc7:2.2.0": "Non-offenses ",
   "pli-tv-bi-vb-pc7:2.2.1": "There is no offense: ",
   "pli-tv-bi-vb-pc7:2.2.2": "if she does it because she is sick; ",
