Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-pc/pli-tv-bi-vb-pc54_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-pc/pli-tv-bi-vb-pc54_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-pc/pli-tv-bi-vb-pc54_translation-en-brahmali.json
@@ -46,7 +46,7 @@
   "pli-tv-bi-vb-pc54:2.2.2": "If she has refused an offer, but she is unsure of it, and she eats fresh or cooked food, she commits an offense entailing confession. ",
   "pli-tv-bi-vb-pc54:2.2.3": "If she has refused an offer, but she does not perceive that she has, and she eats fresh or cooked food, she commits an offense entailing confession. ",
   "pli-tv-bi-vb-pc54:2.2.4": "If she receives post-midday tonics, seven-day tonics, or lifetime tonics for the purpose of food, she commits an offense of wrong conduct. ",
-  "pli-tv-bi-vb-pc54:2.2.5": "For every mouthful, she commits an offense of wrong conduct. … ",
+  "pli-tv-bi-vb-pc54:2.2.5": "For every mouthful swallowed, she commits an offense of wrong conduct. … ",
   "pli-tv-bi-vb-pc54:2.2.6.0": "Non-offenses ",
   "pli-tv-bi-vb-pc54:2.2.6.1": "There is no offense: ",
   "pli-tv-bi-vb-pc54:2.2.7": "if she has refused an offer to eat more, but not an invitation; ",
