Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-pc/pli-tv-bi-vb-pc54_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-pc/pli-tv-bi-vb-pc54_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bi-vb/pli-tv-bi-vb-pc/pli-tv-bi-vb-pc54_translation-en-brahmali.json
@@ -40,7 +40,7 @@
   "pli-tv-bi-vb-pc54:2.1.12": "Cooked food: ",
   "pli-tv-bi-vb-pc54:2.1.13": "there are five kinds of cooked food: cooked grain, porridge, flour products, fish, and meat. ",
   "pli-tv-bi-vb-pc54:2.1.14": "If she receives it with the intention of eating it, she commits an offense of wrong conduct. ",
-  "pli-tv-bi-vb-pc54:2.1.15": "For every mouthful, she commits an offense entailing confession. ",
+  "pli-tv-bi-vb-pc54:2.1.15": "For every mouthful swallowed, she commits an offense entailing confession. ",
   "pli-tv-bi-vb-pc54:2.2.0": "Permutations ",
   "pli-tv-bi-vb-pc54:2.2.1": "If she has refused an offer, and she perceives that she has, and she eats fresh or cooked food, she commits an offense entailing confession. ",
   "pli-tv-bi-vb-pc54:2.2.2": "If she has refused an offer, but she is unsure of it, and she eats fresh or cooked food, she commits an offense entailing confession. ",
