Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr2.10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr2.10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr2.10_translation-en-brahmali.json
@@ -76,6 +76,6 @@
   "pli-tv-pvr2.10:17.1": "How many kinds of offenses does she commit as a result of asking for curd and then eating it? ",
   "pli-tv-pvr2.10:17.2": "she commits two kinds of offenses: ",
   "pli-tv-pvr2.10:17.3": "when she receives it with the intention of eating it, she commits an offense of wrong conduct; ",
-  "pli-tv-pvr2.10:17.4": "for every mouthful, she commits an offense entailing acknowledgment. ",
+  "pli-tv-pvr2.10:17.4": "for every mouthful swallowed, she commits an offense entailing acknowledgment. ",
   "pli-tv-pvr2.10:17.6": "The second section on “how many offenses?” is finished. "
 }
