Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc35_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc35_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc35_translation-en-brahmali.json
@@ -79,7 +79,7 @@
   "pli-tv-bu-vb-pc35:3.1.30": "apart from the five cooked foods, the post-midday tonics, the seven-day tonics, and the lifetime tonics—the rest is called “fresh food”. ",
   "pli-tv-bu-vb-pc35:3.1.31": "Cooked food: ",
   "pli-tv-bu-vb-pc35:3.1.32": "there are five kinds of cooked food: cooked grain, porridge, flour products, fish, and meat. ",
-  "pli-tv-bu-vb-pc35:3.1.33": "If he receives it intending to eat it, he commits an offense of wrong conduct. For every mouthful, he commits an offense entailing confession. ",
+  "pli-tv-bu-vb-pc35:3.1.33": "If he receives it intending to eat it, he commits an offense of wrong conduct. For every mouthful swallowed, he commits an offense entailing confession. ",
   "pli-tv-bu-vb-pc35:3.2.0": "Permutations ",
   "pli-tv-bu-vb-pc35:3.2.1": "If it is not left over, and he does not perceive it as such, and he eats fresh or cooked food, he commits an offense entailing confession. ",
   "pli-tv-bu-vb-pc35:3.2.2": "If it is not left over, but he is unsure of it, and he eats fresh or cooked food, he commits an offense entailing confession. ",
