Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr1.2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr1.2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr1.2_translation-en-brahmali.json
@@ -299,7 +299,7 @@
   "pli-tv-pvr1.2:94.3": "for every mouthful, one commits an offense entailing confession. ",
   "pli-tv-pvr1.2:95.1": "When eating food that has not been given, one commits two kinds of offenses: ",
   "pli-tv-pvr1.2:95.2": "when one receives with the intention to eat, one commits an offense of wrong conduct; ",
-  "pli-tv-pvr1.2:95.3": "for every mouthful, one commits an offense entailing confession. ",
+  "pli-tv-pvr1.2:95.3": "for every mouthful swallowed, one commits an offense entailing confession. ",
   "pli-tv-pvr1.2:96.1": "The fourth subchapter on eating is finished. ",
   "pli-tv-pvr1.2:97.0": "5.5 The subchapter on naked ascetics ",
   "pli-tv-pvr1.2:97.1": "When personally giving fresh or cooked food to a naked ascetic, to a male wanderer, or to a female wanderer, one commits two kinds of offenses: ",
