Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -118,5 +118,5 @@
   "mn122:19.3": "„Unsere Lehren wurzeln im Buddha. Er leitet uns und ist unsere Zuflucht. Herr, es wäre gut, wenn der Buddha selbst erklären würde, was das bedeutet. Die Mönche und Nonnen werden zuhören und es behalten.“ ",
   "mn122:20.1": "„Ein Schüler soll es nicht für wert halten, sich um Aussagen, Mischungen aus Prosa und Dichtung oder um Gesprächen willen dem Lehrer anzuschließen. ",
   "mn122:20.2": "Und warum nicht? ",
-  "mn122:20.3": "Weil ihr für lang Zeit die Lehren gelernt habt, sie im Gedächtnis hattet, sie durch Aufsagen gefestigt, mit dem Geist geprüft und gedanklich erfasst habt. "
+  "mn122:20.3": "Weil ihr für lange Zeit die Lehren gelernt habt, sie im Gedächtnis hattet, sie durch Aufsagen gefestigt, mit dem Geist geprüft und gedanklich erfasst habt. "
 }
