Translations by sujato to translation/en/sujato/sutta/mn/mn50_translation-en-sujato.json

--- a/translation/en/sujato/sutta/mn/mn50_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn50_translation-en-sujato.json
@@ -66,7 +66,7 @@
   "mn50:11.2": "Those cowherds, shepherds, farmers, and passers-by saw him wandering for alms ",
   "mn50:11.3": "and said, ",
   "mn50:11.4": "‘Oh, how incredible, how amazing! ",
-  "mn50:11.5": "This ascetic passed away while sitting, and now he has come back to life!’ ",
+  "mn50:11.5": "This ascetic passed away while seated, and now he has come back to life!’ ",
   "mn50:11.6": "And that’s how he came to be known as Sañjīva. ",
   "mn50:12.1": "Then it occurred to Māra Dūsī, ",
   "mn50:12.2": "‘I don’t know the course of rebirth of these ethical mendicants of good character. ",
