Translations by sujato to translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json

--- a/translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json
@@ -22,7 +22,7 @@
   "mn81:5.1": "“Once upon a time, Ānanda, there was a market town in this spot named Vebhaliṅga. It was successful and prosperous, populous, full of people. ",
   "mn81:5.2": "And Kassapa, a blessed one, a perfected one, a fully awakened Buddha, lived supported by Vebhaliṅga. ",
   "mn81:5.3": "It was here, in fact, that he had his monastery, ",
-  "mn81:5.4": "where he sat and advised the mendicant Saṅgha. ",
+  "mn81:5.4": "where he advised the mendicant Saṅgha while seated. ",
   "mn81:6.1": "The Buddha Kassapa had as chief supporter in Vebhaliṅga a potter named Ghaṭīkāra. ",
   "mn81:6.2": "Ghaṭīkāra had a dear friend named Jotipāla, a brahmin student. ",
   "mn81:6.3": "Then Ghaṭīkāra addressed Jotipāla, ",
