Translations by sujato to translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json

--- a/translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json
@@ -136,7 +136,7 @@
   "mn81:18.14": "“Anyone may leave bagged sesame, mung beans, or chickpeas here and take what they wish.” ",
   "mn81:18.15": "He looks after his blind old parents. ",
   "mn81:18.16": "And since he has ended the five lower fetters, Ghaṭīkāra will be reborn spontaneously and will become extinguished there, not liable to return from that world. ",
-  "mn81:19.1": "This one time, great king, I was staying near the market town of Vebhaliṅga. ",
+  "mn81:19.1": "This one time, great king, I was staying near the market town of Vehaliṅga. ",
   "mn81:19.2": "Then I robed up in the morning and, taking my bowl and robe, went to the home of Ghaṭīkāra’s parents, where I said to them, ",
   "mn81:19.3": "“Excuse me, where has Bhaggava gone?” ",
   "mn81:19.4": "“Your supporter has gone out, sir. But take rice from the pot and sauce from the pan and eat.” ",
