Translations by sujato to translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json

--- a/translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json
@@ -148,7 +148,7 @@
   "mn81:19.10": "“I’m so fortunate, so very fortunate, ",
   "mn81:19.11": "in that the Buddha Kassapa trusts me so much!” ",
   "mn81:19.12": "Then joy and happiness did not leave him for a fortnight, or his parents for a week. ",
-  "mn81:20.1": "Another time, great king, I was staying near that same market town of Vebhaliṅga. ",
+  "mn81:20.1": "Another time, great king, I was staying near that same market town of Vehaliṅga. ",
   "mn81:20.2": "Then I robed up in the morning and, taking my bowl and robe, went to the home of Ghaṭīkāra’s parents, where I said to them, ",
   "mn81:20.3": "“Excuse me, where has Bhaggava gone?” ",
   "mn81:20.4": "“Your supporter has gone out, sir. But take porridge from the pot and sauce from the pan and eat.” ",
