Translations by sujato to translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json

--- a/translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn81_translation-en-sujato.json
@@ -160,7 +160,7 @@
   "mn81:20.10": "“I’m so fortunate, so very fortunate, ",
   "mn81:20.11": "to be trusted so much by the Buddha Kassapa!” ",
   "mn81:20.12": "Then joy and happiness did not leave him for a fortnight, or his parents for a week. ",
-  "mn81:21.1": "Another time, great king, I was staying near that same market town of Vebhaliṅga. ",
+  "mn81:21.1": "Another time, great king, I was staying near that same market town of Vehaliṅga. ",
   "mn81:21.2": "Now at that time my hut leaked. ",
   "mn81:21.3": "So I addressed the mendicants, ",
   "mn81:21.4": "“Mendicants, go to Ghaṭīkāra’s home and find some grass.” ",
