Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn3/sn3.25_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn3/sn3.25_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn3/sn3.25_translation-de-sabbamitta.json
@@ -45,7 +45,7 @@
   "sn3.25:7.1": "So kommen auch Alter und Tod ",
   "sn3.25:7.2": "auf alle lebenden Geschöpfe zu – ",
   "sn3.25:7.3": "auf Adlige, Brahmanen, Landarbeiter, ",
-  "sn3.25:7.4": "Hilfsarbeiter, Ausgestoßene und Abfallsammler. ",
+  "sn3.25:7.4": "Hilfsarbeiter, Leichenbeseitiger und Lumpensammler. ",
   "sn3.25:7.5": "Sie verschonen nichts, ",
   "sn3.25:7.6": "zermalmen alles unter sich. ",
   "sn3.25:8.1": "Kein Platz, auf dem Elefanten stehen können, ",
