Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an3/an3.34_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an3/an3.34_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.34_translation-de-sabbamitta.json
@@ -17,7 +17,7 @@
   "an3.34:5.4": "Ebenso kommt jede Tat, aus von Gier hervorgeht, aus Gier geboren wird, die dort entspringt und ihren Ursprung hat, zur Reife, wo immer diese neue Verkörperung geboren wird. ",
   "an3.34:5.5": "Und wo diese Tat zur Reife kommt, dort wird ihre Folge erfahren: sei es in diesem Leben, im nächsten Leben oder zu einer späteren Zeit. ",
   "an3.34:6.1": "Jede Tat, die aus Hass hervorgeht … ",
-  "an3.34:6.2": "Jede Tat, die aus Täuschung hervorgeht, aus Täuschung geboren wird, die dort entspringt und ihren Ursprung hat, kommt zur Reife, wo immer diese neue Lebensform geboren wird. ",
+  "an3.34:6.2": "Jede Tat, die aus Täuschung hervorgeht, aus Täuschung geboren wird, die dort entspringt und ihren Ursprung hat, kommt zur Reife, wo immer diese neue Verkörperung geboren wird. ",
   "an3.34:6.3": "Und wo diese Tat zur Reife kommt, dort wird ihre Folge erfahren: sei es in diesem Leben, im nächsten Leben oder zu einer späteren Zeit. ",
   "an3.34:6.4": "Das sind drei Quellen, aus denen Taten hervorgehen. ",
   "an3.34:7.1": "Mönche und Nonnen, es gibt drei Quellen, aus denen Taten hervorgehen. ",
