Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an3/an3.93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an3/an3.93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.93_translation-de-sabbamitta.json
@@ -21,7 +21,7 @@
   "an3.93:5.6": "Wenn ein Mönch diese drei Arten von Abgeschiedenheit besitzt, ",
   "an3.93:5.7": " ",
   "an3.93:5.8": " ",
-  "an3.93:5.9": "nennt man ihn einen Mönch, der den Gipfel und den Kern erreicht hat, der rein und im Kern verankert ist. ",
+  "an3.93:5.9": "nennt man ihn einen Mönch, der den Gipfel und den Kern erreicht hat, der rein und im Kern gefestigt ist. ",
   "an3.93:6.1": "Wenn das Feld eines Bauern reif ist, ",
   "an3.93:6.2": "lässt er eilig den Reis schneiden, ",
   "an3.93:6.3": "ihn eilig aufsammeln, ",
