Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn3_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn3_translation-de-sabbamitta.json
@@ -77,7 +77,7 @@
   "dn3:1.14.2": "Kapilavatthu ist der Ort, der den Sakyern gehört, Ambaṭṭha. Es ist des Ehrwürdigen Ambaṭṭha nicht würdig, wegen so einer Kleinigkeit die Beherrschung zu verlieren.“ ",
   "dn3:1.14.3": "„Meister Gotama, es gibt diese vier Klassen: ",
   "dn3:1.14.4": "die Adligen, die Brahmanen, die Landarbeiter und die Hilfsarbeiter. ",
-  "dn3:1.14.5": "Drei dieser Kasten, ",
+  "dn3:1.14.5": "Drei dieser Klassen, ",
   "dn3:1.14.6": "die Adligen, die Landarbeiter und die Hilfsarbeiter, ",
   "dn3:1.14.7": "gedeihen eigentlich nur, wenn sie den Brahmanen dienen. ",
   "dn3:1.14.8": "Es ist weder richtig noch angemessen, dass die Sakyer, Primitive, die sie sind, Brahmanen nicht ehren, achten, würdigen und verehren, ihnen nicht huldigen.“ ",
