Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn24/sn24.70_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn24/sn24.70_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn24/sn24.70_translation-de-sabbamitta.json
@@ -4,7 +4,7 @@
   "sn24.70:0.3": "Weder Leiden noch Glück ",
   "sn24.70:1.1": "In Sāvatthī. ",
   "sn24.70:1.2": "„Mönche und Nonnen, wenn was besteht, weil man was ergreift und worauf besteht, entsteht die Ansicht: ",
-  "sn24.70:1.3": "‚Das Selbst erfährt nach dem Tod weder Leiden noch Glück, und es ist heil‘?“ ",
+  "sn24.70:1.3": "‚Das Selbst erfährt nach dem Tod weder Leiden noch Glück, und es ist frei von Krankheit‘?“ ",
   "sn24.70:1.4": "„Unsere Lehren wurzeln im Buddha …“ ",
   "sn24.70:2.1": "„Wenn Form besteht, Mönche und Nonnen, weil man Form ergreift und auf Form besteht, entsteht die Ansicht: ",
   "sn24.70:2.2": "‚Das Selbst erfährt nach dem Tod weder Leiden noch Glück, und es ist heil.‘ ",
