Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn24/sn24.70_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn24/sn24.70_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn24/sn24.70_translation-de-sabbamitta.json
@@ -17,7 +17,7 @@
   "sn24.70:3.2": "Ist Form beständig oder unbeständig?“ ",
   "sn24.70:3.3": "„Unbeständig, Herr.“ … ",
   "sn24.70:3.4": "„Aber wenn man nicht ergreifen würde, was unbeständig und Leiden ist und zugrunde gehen muss, würde dadurch die Ansicht entstehen: ",
-  "sn24.70:3.5": "‚Das Selbst erfährt nach dem Tod weder Leiden noch Glück, und es ist heil‘?“ ",
+  "sn24.70:3.5": "‚Das Selbst erfährt nach dem Tod weder Leiden noch Glück, und es ist frei von Krankheit‘?“ ",
   "sn24.70:3.6": "„Nein, Herr.“ ",
   "sn24.70:3.7": "„Daher ist, was unbeständig ist, Leiden. ",
   "sn24.70:3.8": "Wenn das besteht, weil man das ergreift, entsteht die Ansicht: ",
